# text-align

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: align-nt.yml  align-ot.yml
configs/: APBRT.yaml  ASBRT.yaml  BSB.yaml  JFA11.yaml  LSG.yaml  OENGB.yaml  RV09.yaml  example.yaml
data/alignments/alignments-fra/exp/LSG/LLM-REFINED/: SBLGNT-LSG-41-001-manual.json  SBLGNT-LSG-41-001-manual.retries.json  SBLGNT-LSG-41-002-manual.json  SBLGNT-LSG-41-002-manual.retries.json  SBLGNT-LSG-41-003-manual.json  SBLGNT-LSG-41-003-manual.retries.json  SBLGNT-LSG-41-004-manual.json  (+32 more)
docs/: alignment-principles-nt.md  alignment-principles-ot.md  alignment-scoring-plan.md  alignment_principles-nt.por.md  batch-api-plan.md  gha-alignment-plan.md  refine-alignment-design.md  refine-prompt-blocks.md
scripts/: alignment_summary.py  copy-from-gha.py  copy-to-gha.py  nt_chapters.py  ot_chapters.py  sync_clear_data.ps1
src/text_align/: __init__.py  config.py  stopwords.py  strongs.py
src/text_align/align/: __init__.py  acai.py  acai_common.py
src/text_align/burrito/: AlignmentGroup.py  AlignmentSet.py  AlignmentType.py  BadRecord.py  BaseToken.py  VerseData.py  __init__.py  alignments.py  manager.py  source.py  target.py  util.py
src/text_align/migrate/: __init__.py  alignment_io.py  diff.py  models.py  sim.py  tsv.py
src/text_align/refine/: __init__.py  async_batch.py  clean.py  clean_cli.py  coverage.py  fetch_batch.py  llm.py  refine.py  retry.py  retry_cli.py  score_alignments.py  scoring.py  scoring_stopwords.py  semantic.py  source.py  util.py
src/text_align/refine/prompt/: __init__.py  common.py
src/text_align/refine/prompt/nt/: __init__.py  core.py  eng.prose.py  eng.py  fra.prose.py  fra.py  por.prose.py  por.py  spa.prose.py  spa.py
src/text_align/refine/prompt/ot/: __init__.py  core.py  eng.prose.py  eng.py
src/text_align/render/: __init__.py  html.py
tests/: test_clean.py  test_scoring.py
(+6 files in other folders)
