[tool.poetry]
name = "text-align"
version = "0.1.0"
description = "Code to create and improve Bible text alignments for the Aquifer"
authors = ["Rick Brannan <rbrannan@gloo.us>"]
repository = "https://github.com/BibleAquifer/text-align"
readme = "README.md"
packages = [
  {include = "text_align", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
biblelib = "0.3.17"
pandas = "^2.0.2"
regex = ">=2024.5.15"
unicodecsv = "^0.14.1"
pyyaml = "^6.0"
sentence-transformers = "^3.2.1"
transformers = "^4.46.2"
torch = "^2.5.1"
stopwordsiso = "0.7.0"
nltk = "^3.8.1"
jellyfish = "^1.1.0"
unidecode = "^1.3.8"
thefuzz = "^0.22.1"
openai = ">=1.0.0"
anthropic = ">=0.30.0"
google-genai = ">=1.0.0"
requests = "^2.34.2"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
diff-migrate = "text_align.migrate.diff:main"
sim-migrate = "text_align.migrate.sim:main"
acai-align = "text_align.align.acai:main"
render-alignment = "text_align.render.html:main"
refine-alignment = "text_align.refine.refine:main"
fetch-batch = "text_align.refine.fetch_batch:main"
retry-alignment = "text_align.refine.retry_cli:main"
score-alignment = "text_align.refine.score_alignments:main"
clean-alignments = "text_align.refine.clean_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
